[package]
name = "pyth-lazer-protocol"
version = "0.1.0"
edition = "2021"
description = "Pyth Lazer SDK - protocol types."
license = "Apache-2.0"
repository = "https://github.com/pyth-network/pyth-crosschain"

[dependencies]
byteorder = "1.4.3"
anyhow = "1.0.70"
serde = { version = "1.0.209", features = ["derive"] }
derive_more = { version = "0.99.18", features = ["from"] }
itertools = "0.13.0"
rust_decimal = "1.36.0"
